--- a/index.html
+++ b/index.html
@@ -109,12 +109,14 @@
               <p>Waktu Eksekusi: <span id="bruteforceTime"></span></p>
               <p>Rute: <span id="bruteforceRoute"></span></p>
               <p>Jarak: <span id="bruteforceDistance"></span> KM</p>
+              <p>Biaya: RP. <span id="bruteforceCost"></span></p>
             </div>
             <div id="branchboundResult" class="border p-2 mb-2">
               <h4>Branch and Bound</h4>
               <p>Waktu Eksekusi: <span id="branchboundTime"></span></p>
               <p>Rute: <span id="branchboundRoute"></span></p>
               <p>Jarak: <span id="branchboundDistance"></span> KM</p>
+              <p>Biaya: RP. <span id="branchboundCost"></span></p>
             </div>
           </div>
         </div>
