--- a/Kompleksitas.html
+++ b/Kompleksitas.html
@@ -95,7 +95,7 @@
     <div class="card">
         <h1>Brute Force</h1>
         <p>
-            Kompleksitas waktu di O((𝑛−1)!) di mana 𝑛 adalah jumlah kota yang harus dikunjungi.
+            Kompleksitas waktu di O(n(𝑛−1)!) di mana 𝑛 adalah jumlah kota yang harus dikunjungi.
         </p>
         <p>
             ( + ) Keakuratannya karena memeriksa setiap kemungkinan rute. <br/>
@@ -110,7 +110,7 @@
     <div class="card">
         <h1>Branch and Bound</h1>
         <p>
-            Kompleksitas waktu dari Branch and Bound berkisar antara 𝑂(𝑛² × 2^𝑛) hingga 𝑂(𝑛³ × 2^𝑛), tergantung pada
+            Kompleksitas waktu dari Branch and Bound berkisar antara berkisar antara O(n(n-1)!, tergantung pada
             implementasinya.
         </p>
         <p>
